fixes nav width on mobile

--- a/assets/styles/common.blocks/_nav.scss
+++ b/assets/styles/common.blocks/_nav.scss
@@ -47,11 +47,12 @@
         transition: all 122s ease-in-out;
     }
     &__item {
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
         text-align: center;
     }
     &__link {
-        padding: 2rem 10rem;
+        width: 100%;
+        padding: 2rem;
         font-family: $proximanova-semibold;
         text-transform: uppercase;
         letter-spacing: 1px;
@@ -61,6 +62,15 @@
         color: $typography-color-inverse;
         &:hover, &:active {
             background-color: rgba(255,255,255, 0.1);
+        }
+        @include for-size(sm) {
+            width: 60%;
+        }
+        @include for-size(md) {
+            width: 40%;
+        }
+        @include for-size(lg) {
+            width: 30%;
         }
     }
     &--mobile-open {
